@@ -1452,17 +1452,17 @@ packet_ver: 25
 0x0801,-1,purchasereq2,2:4:8:12
 
 //2009-12-22aRagexeRE
-//0x0802,18
-//0x0803,4
-//0x0804,8
-//0x0805,-1
-//0x0806,4
-//0x0807,2
-//0x0808,4
-0x0809,14
-//0x080a,50
-//0x080b,18
-//0x080c,6
+0x0802,18
+0x0803,4
+0x0804,14
+0x0805,-1
+0x0806,2
+0x0807,4
+0x0808,14
+0x0809,50
+0x080a,18
+0x080b,6
+0x080c,2
 
 //2010-02-23aRagexeRE
 0x080f,20
